--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Ark Dino Calculator</a>
+          <a class="navbar-brand" href="#">Ejuice Calculator</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
