--- a/public/index.html
+++ b/public/index.html
@@ -5,89 +5,86 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="/img/favicon.ico">
-    <title>Juice Calculator</title>
+    <meta name="description" content="E Juice Calculator">
+    <meta name="author" content="Taylor Growden">
+    <link rel="icon" href="img/favicon.ico">
+
+    <title>E Juice Calculator</title>
+
     <!-- Bootstrap core CSS -->
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
     <!-- Custom styles for this template -->
-    <link href="/css/home.css" rel="stylesheet">
-    <link href="/css/dragula.css" rel="stylesheet">
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <link href="css/home.css" rel="stylesheet">
+
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="js/bootstrap/ie10-viewport-bug-workaround.js"></script>
   </head>
+
   <body>
+
     <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Ejuice Calculator</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="/about/">About</a></li>
-            <!--             <li><a href="#contact">Contact</a></li> -->
-          </ul>
-          </div><!--/.nav-collapse -->
-        </div>
-      </nav>
-      <!-- Start of Main Content -->
-      <div class="mainContent">
-        <div class="row">
+      <a class="navbar-brand" href="#">Project name</a>
+      <ul class="nav nav-pills">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Contact</a>
+        </li>
+      </ul>
+    </nav>
+
+    <div class="container">
+
+      <div class="row">
           <div class="col-sm-5">
 
               <table class="table-bordered table-hover table-striped table-condensed">
                 <tr>
-                  <td>Target Amount: </td>
+                  <td>Total Amount: </td>
                   <td>
                     <div class="input-group">
-                      <input id="total" type="number" value="0" />
+                      <input id="total" class="targets" type="number" value="0" />
                       <span class="input-group-addon">mL</span>
                     </div>
                   </td>
                 </tr>
-              </table>
+                <tr>
+                  <td>Target Nicotine: </td>
+                  <td>
+                    <div class="input-group">
+                      <input id="targetNic" class="targets" type="number" value="0" />
+                      <span class="input-group-addon">mg / mL</span>
+                    </div>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Target VG: </td>
+                  <td>
+                    <div class="input-group">
+                      <input id="targetVg" class="targets" type="number" value="0" />
+                      <span class="input-group-addon">%</span>
+                    </div>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Target PG: </td>
+                  <td>
+                    <div class="input-group">
+                      <input id="targetPg" class="targets" type="number" value="0" />
+                      <span class="input-group-addon">%</span>
+                    </div>
+                  </td>
+                </tr>
 
-          </div>
-          <div class="col-sm-7">
-
-              <table class="table-bordered table-hover table-striped table-condensed">
-                <tr>
-                  <td class="massHeader hide"></td>
-                  <td class="massHeader hide"></td>
-                  <td class="massHeader hide">Mass</td>
-                </tr>
-                <tr>
-                  <td>Target Nicotine (%): </td>
-                  <td><input id="targetNic" type="number" value="0" /></td>
-                  <td class="mass hide"><input id="massNic" class="massInput" type="number"/></td>
-                </tr>
-                <tr>
-                  <td>Target VG (%): </td>
-                  <td><input id="targetVG" type="number" value="0" /></td>
-                  <td id="vgMass" class="mass hide"><input id="massVG" class="massInput" type="number" value="1.26"/></td>
-                </tr>
-                <tr>
-                  <td>Target PG (%): </td>
-                  <td><input id="targetPG" type="number" value="0" /></td>
-                  <td id="pgMass" class="mass hide"><input id="massPG" class="massInput" type="number" value="1.038"/></td>
-                </tr>
               </table>
 
           </div>
         </div>
-
-
         <div class="row">
           <div id="ingredientsContainer" class="contentCont tableContainer col-sm-12">
             <div class="table-responsive">
@@ -152,19 +149,24 @@
                 </tr>
               </tbody>
             </table>
-            <br />
+            </div>
+            <br style="clear: both;"/>
+            <div class="row">
             <input id="calculate" class="btn btn-default" type="button" value="Calculate" />
+            </div>
 
-        </div>
-        </div><!-- /.container -->
-        <!-- Bootstrap core JavaScript
-        ================================================== -->
-        <!-- Placed at the end of the document so the pages load faster -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-        <script src="/js/bootstrap.min.js"></script>
-        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-        <script src="/js/ie10-viewport-bug-workaround.js"></script>
-        <script src="/js/scripts.js"></script>
-        <script src="/js/dragula.js"></script>
-      </body>
-    </html>
+        
+
+    </div><!-- /.container -->
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/bootstrap/jquery.min.js"><\/script>')</script>
+    <!-- custom scripts -->
+    <script src="js/scripts.js"></script>
+    <script src="js/bootstrap/bootstrap.min.js"></script>
+  </body>
+</html>
